# freedom-metal

./: .gitignore  .gitmodules  .travis.yml  Doxyfile  LICENSE  Makefile  Makefile.am  Makefile.in  aclocal.m4  build.wake  conanfile.py  configure  configure.ac  freedom-metal.make  metal-depend.make  metal_nano.make  metal_pico.make  requirements.txt  wit-manifest.json
.github/workflows/: release.yml  tests.yml  wake.yml
doc/: Dockerfile  Makefile  README.md  freedom-metal-next.odp
doc/sphinx/: api.rst  conf.py  devguide.rst  driver.dot  driver.rst  generate.rst  index.rst  introduction.rst
doc/sphinx/apiref/: atomic.rst  button.rst  clock.rst  cpu.rst  csr.rst  exception.rst  hpm.rst  i2c.rst  init.rst  interrupt.rst  io.rst  itim.rst  led.rst  pmp.rst  privilege.rst  pwm.rst  ringbuf.rst  riscv.rst  shutdown.rst  spi.rst  switch.rst  uart.rst
doc/sphinx/classes/: interrupt.rst  itim.rst  timer.rst  tty.rst
doc/sphinx/devguide/: exceptions.rst  fe310-g000-pll.rst  init.rst  interrupts.rst  itim.rst  pmps.rst  tty.rst
docker/: Dockerfile
gloss/: crt0.S  encoding.h  nanosleep.c  synchronize_harts.c  sys_access.c  sys_chdir.c  sys_chmod.c  sys_chown.c  sys_clock_gettime.c  sys_close.c  sys_exit.c  sys_faccessat.c  sys_fork.c  sys_fstat.c  sys_fstatat.c  sys_ftime.c  sys_getcmdline.c  sys_getcwd.c  sys_getpid.c  sys_gettimeofday.c  sys_isatty.c  sys_kill.c  sys_link.c  sys_lseek.c  sys_lstat.c  sys_open.c  sys_openat.c  sys_read.c  sys_sbrk.c  sys_stat.c  sys_sysconf.c  sys_times.c  sys_unlink.c  sys_utime.c  sys_wait.c  sys_write.c  vm.c
hello-src/: hello.c
mee/: button.h  clock.h  compiler.h  cpu.h  interrupt.h  itim.h  led.h  pmp.h  shutdown.h  switch.h  timer.h  times.h  uart.h
mee/drivers/: riscv,clint0.h  riscv,cpu.h  riscv,plic0.h  riscv,rv32,pmp.h  riscv,rv64,pmp.h  sifive,clic0.h  sifive,cpu_timer.h  sifive,fe310-g000,pll.h  sifive,global-external-interrupts0.h  sifive,gpio-buttons.h  sifive,gpio-switches.h  sifive,gpio0.h  sifive,local-external-interrupts0.h  sifive,uart0.h
metal/: atomic.h  button.h  cache.h  clock.h  compiler.h  cpu.h  crypto.h  csr.h  dma.h  emmc.h  exception.h  flash.h  gpio.h  hca.h  hca_aes.h  hca_sha.h  hca_trng.h  hpm.h  i2c.h  i2s.h  init.h  interrupt.h  interrupt_handlers.h  interrupt_vector_handlers.h  io.h  led.h  lock.h  machine.h  mallard.h  memory.h  nmi.h  otp.h  pdma.h  pmp.h  prci.h  privilege.h  pwm.h  qspi.h  remapper.h  ringbuf.h  (+12 more)
metal/drivers/: fixed-clock.h  fixed-factor-clock.h  fixed_clock.h  fixed_factor_clock.h  riscv,clint0.h  riscv,cpu.h  riscv,plic0.h  riscv_cpu.h  riscv_cpu_intc.h  riscv_dma0.h  riscv_plic0.h  sifive,clic0.h  sifive,fe310-g000,hfrosc.h  sifive,fe310-g000,hfxosc.h  sifive,fe310-g000,pll.h  sifive,fe310-g000,prci.h  sifive,fu540-c000,l2.h  sifive,global-external-interrupts0.h  sifive,gpio-buttons.h  sifive,gpio-leds.h  sifive,gpio-switches.h  sifive,gpio0.h  sifive,htif0.h  sifive,local-external-interrupts0.h  sifive,spi0.h  sifive,test0.h  sifive,uart0.h  sifive_buserror0.h  sifive_ccache0.h  sifive_clic0.h  sifive_defs.h  sifive_fe310_g000_hfrosc.h  sifive_fe310_g000_hfxosc.h  sifive_fe310_g000_lfrosc.h  sifive_fe310_g000_pll.h  sifive_flash.h  sifive_fu540-c000_l2.h  sifive_gpio-buttons.h  sifive_gpio-leds.h  sifive_gpio-switches.h  (+40 more)
pico/: iob.c  sysconf.c  times.c
scripts/: autoconf_wrapper  check-format  codegen.py  format  freedom-metal-generate  intgen.py
scripts/metal_depend/: Makefile  README.md  build.wake  metal_depend.py  requirements.txt  sources.py
segger/: SEGGER_SEMIHOST.h  SEGGER_target_metal.c  sys_gettimeofday.c  sys_times.c  sys_write.c
semifive-blocks/templates/: MANIFEST.ini
sifive-blocks/metal/drivers/: sifive_buserror0.h  sifive_ccache0.h  sifive_clic0.h  sifive_clint_regs.h  sifive_defs.h  sifive_fe310_g000_hfrosc.h  sifive_fe310_g000_hfxosc.h  sifive_fe310_g000_lfrosc.h  sifive_fe310_g000_pll.h  sifive_gpio0_regs.h  sifive_hca0.h  sifive_hca0_aes.h  sifive_hca0_regs.h  sifive_hca0_sha.h  sifive_hca0_trng.h  sifive_i2c0.h  sifive_pwm0.h  sifive_pwm0_regs.h  sifive_spi0.h  sifive_spi0_regs.h  sifive_uart0_regs.h
sifive-blocks/src/drivers/: sifive_aon0.c  sifive_buserror0.c  sifive_ccache0.c  sifive_clic0.c  sifive_fe310_g000_hfrosc.c  sifive_fe310_g000_hfxosc.c  sifive_fe310_g000_lfrosc.c  sifive_fe310_g000_pll.c  sifive_gpio0.c  (+13 more)
sifive-blocks/templates/: MANIFEST.ini
src/: button.c  cache.c  clock.c  cpu.c  csr.c  dma.c  emmc.c  entry.S  exception.c  flash.c  gpio.c  hca.c  hca_aes.c  hca_sha.c  hca_trng.c  hpm.c  i2c.c  i2s.c  init.c  interrupt.c  led.c  lock.c  mallard.c  memory.c  otp.c  pdma.c  pmp.c  prci.c  privilege.c  pwm.c  qspi.c  remapper.c  ringbuf.c  rtc.c  sbr_cease.S  sbr_exit.S  sbr_s3mngt.S  scrub.S  shutdown.c  spi.c  (+9 more)
src/drivers/: fixed-clock.c  fixed-factor-clock.c  fixed_clock.c  fixed_factor_clock.c  inline.c  riscv,clint0.c  riscv,cpu.c  riscv,cpu_timer.c  riscv,plic0.c  riscv,rv32,pmp.c  riscv,rv64,pmp.c  riscv_clint0.c  riscv_cpu.c  riscv_cpu_intc.c  riscv_dma0.c  riscv_plic0.c  sifive,clic0.c  sifive,cpu_timer.c  sifive,fe310-g000,hfrosc.c  sifive,fe310-g000,hfxosc.c  sifive,fe310-g000,pll.c  sifive,fe310-g000,prci.c  sifive,fu540-c000,l2.c  sifive,global-external-interrupts0.c  sifive,gpio-buttons.c  sifive,gpio-leds.c  sifive,gpio-switches.c  sifive,gpio0.c  sifive,htif0.c  sifive,local-external-interrupts0.c  sifive,spi0.c  sifive,test0.c  sifive,uart0.c  sifive_buserror0.c  sifive_ccache0.c  sifive_clic0.c  sifive_fe310-g000_hfrosc.c  sifive_fe310-g000_hfxosc.c  sifive_fe310-g000_lfrosc.c  sifive_fe310-g000_pll.c  (+44 more)
templates/: MANIFEST.ini  clock_dispatch.h  clock_dispatch.h.j2  interrupt_dispatch.h  interrupt_dispatch.h.j2  metal.mk.j2  template_comment.h.j2
templates/metal/: interrupt_handlers.h  interrupt_handlers.h.j2  platform.h.j2
templates/src/: interrupt_handlers.c  interrupt_handlers.c.j2  interrupt_table.c  interrupt_table.c.j2  jump_table.S  jump_table.S.j2
test/: hello.c  pll_set_hz.c  qemu_sifive_e31.dts  qemu_sifive_e31.lds  return_fail.c  return_pass.c
tests/: test-wake-api.sh  test-wake-install.sh
(+103 files in other folders)
